--- a/index.html
+++ b/index.html
@@ -148,7 +148,14 @@
         </ul>
 
       </div>
-
+  <footer id="footer">
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright 2025 I All Rights Reserved By <strong><span> <a href="https://t.me/montu_raja" style="color: #FF0000;">MontuRaja<br></a></span></strong>
+        <div><a rel="noopener" href=""></a></div>
+      </div>
+    </div>
+  </footer>
     </aside>
 
 
